[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edan"
version = "0.5.1"
authors = [
  { name="Luis J. Villanueva", email="villanueval@si.edu" },
]
description = "Python module to query the Smithsonian's internal Enterprise Digital Asset Network (EDAN)."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/smithsonian/edan-python"
"Bug Tracker" = "https://github.com/smithsonian/edan-python/issues"
